crates/check_cli/tests/snapshots/main_cases_overrides_formatter/does_not_override_well_known_special_files_when_config_override_is_present.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `check.json`

```json
{
  "overrides": [
    {
      "includes": ["**/*.json"],
      "formatter": { "enabled": false }
    }
  ]
}
```

## `other.json`

```json
{
    "asta": ["lorem", "ipsum", "first", "second"]
}
```

## `tsconfig.json`

```json
{
    // This is a comment
    "compilerOptions": {},
}
```

# Emitted Messages

```block
Checked 2 files in <TIME>. No fixes applied.
```
