crates/check_cli/tests/snapshots/main_cases_overrides_formatter/overrides_default_formatter_for_package_json.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{
  "overrides": [
    {
      "includes": ["package.json"],
      "json": { "formatter": { "expand": "auto" } }
    }
  ]
}
```

## `package.json`

```json
{ "name": "foo", "dependencies": { "foo": "latest" } }
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
package.json format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - {·"name":·"foo",·"dependencies":·{·"foo":·"latest"·}·}
      1 │ + {·"name":·"foo",·"dependencies":·{·"foo":·"latest"·}·}
      2 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
